@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.390 2005/09/22 17:56:53 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.391 2005/09/23 02:02:09 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
@@ -11,6 +11,8 @@
   previously
   insert new line under previous definition of variable if it exists
   small _edit_config() cleanup
+  src/GLIStorageDevice.py:
+  add clear_partitions() function
 
   21 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
